updated bastion role - molecule test is not working properly

--- a/templates/dhcpcd.conf.j2
+++ b/templates/dhcpcd.conf.j2
@@ -1,4 +1,4 @@
 interface {{  dhcpcd_interface }}
-static ip_address={{ static_ip_address }}
+static ip_address={{ dhcpcd_ip_address }}
 #static routers={{  dhcpcd_router }}
 #static domain_name_servers={{ dhcpcd_dns }}
